Changement sur le schema.org

--- a/index.html
+++ b/index.html
@@ -174,11 +174,14 @@
 			<span itemprop="addressLocality">Bordeaux</span>,
 			<span itemprop="addressRegion">Nouvelle-Aquitaine</span>,
 			<span itemprop="postalCode">33200</span>
+			<span itemprop="addressCountry">France</span>
 		</div>
 		<span itemprop="telephone">05 56 67 78 89</span>
+		<meta itemprop="priceRange" content="€€">
 		<div>Horaires : 
 			<meta itemprop="openingHours" content="Mo-Fr 10:00-19:00" />
-			<span>Lun-Ven 10h-19h</span>
+			<span>Lundi au Vendredi de 10h00 à 19h00</span>
+			<img itemprop="image" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" alt="Nina Carducci - Photographe à Bordeaux" />
 		</div>
 	</div>
 </footer>
