Changement sur le schema.org

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		<div>Horaires : 
 			<meta itemprop="openingHours" content="Mo-Fr 10:00-19:00" />
 			<span>Lundi au Vendredi de 10h00 à 19h00</span>
-			<img itemprop="image" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" alt="Nina Carducci - Photographe à Bordeaux" />
+			<img itemprop="image" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" alt="Nina Carducci - Photographe à Bordeaux"  style="display:none;" />
 		</div>
 	</div>
 </footer>
