--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			<span itemprop="addressLocality">Bordeaux</span>,
 			<span itemprop="addressRegion">Nouvelle-Aquitaine</span>,
 			<span itemprop="postalCode">33200</span>
-			<span itemprop="addressCountry">France</span>
+			<span itemprop="addressCountry" content="FR">France</span>
 		</div>
 		<span itemprop="telephone">05 56 67 78 89</span>
 		<meta itemprop="priceRange" content="€€">
