Ajout des open graph et twitter cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci – Photographe à Bordeaux | Portraits, Mariages, Entreprises</title>
 	<meta name="description" content="Nina Carducci, photographe à Bordeaux 33200, capture vos moments précieux. Spécialisée en portraits, mariages et photos d'entreprise, elle apporte un regard artistique unique à chaque séance photo.">
-	<!-- <meta name="keywords" content="photographe Bordeaux, photographie professionnelle, portraits Bordeaux, mariages Bordeaux, séances photo entreprise, Nina Carducci, photographe 33200, album photo personnalisé, retouches photo professionnelles"> -->
+	 
+	 <meta property="og:title" content="Nina Carducci – Photographe à Bordeaux" />
+	 <meta property="og:description" content="Découvrez le travail de Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et les événements." />
+	 <meta property="og:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
+	 <meta property="og:url" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/" />
+	 <meta property="og:type" content="website" />
+ 
+	 <meta name="twitter:card" content="summary_large_image" />
+	 <meta name="twitter:title" content="Nina Carducci – Photographe à Bordeaux" />
+	 <meta name="twitter:description" content="Découvrez le travail de Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et les événements." />
+	 <meta name="twitter:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
+	 <meta name="twitter:url" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/" />
+
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
