--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<meta name="description" content="Nina Carducci, photographe à Bordeaux 33200, capture vos moments précieux. Spécialisée en portraits, mariages et photos d'entreprise, elle apporte un regard artistique unique à chaque séance photo.">
 	 
 	 <meta property="og:title" content="Nina Carducci – Photographe à Bordeaux" />
-	 <meta property="og:description" content="Découvrez le travail de Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et les événements." />
+	 <meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et événements." />
 	 <meta property="og:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
 	 <meta property="og:url" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/" />
 	 <meta property="og:type" content="website" />
  
 	 <meta name="twitter:card" content="summary_large_image" />
 	 <meta name="twitter:title" content="Nina Carducci – Photographe à Bordeaux" />
-	 <meta name="twitter:description" content="Découvrez le travail de Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et les événements." />
+	 <meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et événements." />
 	 <meta name="twitter:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
 	 <meta name="twitter:url" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/" />
 
