Modification du schema.org

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
 	<title>Nina Carducci – Photographe à Bordeaux | Portraits, Mariages, Entreprises</title>
 	<meta name="description" content="Nina Carducci, photographe à Bordeaux 33200, capture vos moments précieux. Spécialisée en portraits, mariages et photos d'entreprise, elle apporte un regard artistique unique à chaque séance photo.">
 	 
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci – Photographe à Bordeaux",
+		  "image": "https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "Nouvelle-Aquitaine",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "priceRange": "€€"
+		}
+		</script>
+		
 	 <meta property="og:title" content="Nina Carducci – Photographe à Bordeaux" />
 	 <meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et événements." />
 	 <meta property="og:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
@@ -178,24 +198,6 @@
 		</div>
 	</div>
 
-	
-	<div itemscope itemtype="http://schema.org/LocalBusiness">
-		<span itemprop="name">Nina Carducci – Photographe à Bordeaux</span>
-		<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-			<span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>,
-			<span itemprop="addressLocality">Bordeaux</span>,
-			<span itemprop="addressRegion">Nouvelle-Aquitaine</span>,
-			<span itemprop="postalCode">33200</span>
-			<span itemprop="addressCountry" content="FR">France</span>
-		</div>
-		<span itemprop="telephone">05 56 67 78 89</span>
-		<meta itemprop="priceRange" content="€€">
-		<div>Horaires : 
-			<meta itemprop="openingHours" content="Mo-Fr 10:00-19:00" />
-			<span>Lundi au Vendredi de 10h00 à 19h00</span>
-			<img itemprop="image" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" alt="Nina Carducci - Photographe à Bordeaux"  style="display:none;" />
-		</div>
-	</div>
 </footer>
 
 
