Modification du schema.org

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 			"addressLocality": "Bordeaux",
 			"addressRegion": "Nouvelle-Aquitaine",
 			"postalCode": "33200",
-			"addressCountry": "France"
+			"addressCountry": "FR"
 		  },
 		  "telephone": "05 56 67 78 89",
 		  "openingHours": "Mo-Fr 10:00-19:00",
-		  "priceRange": "€€"
+		  "priceRange": "50€ à 400€"
 		}
 		</script>
-		
+
 	 <meta property="og:title" content="Nina Carducci – Photographe à Bordeaux" />
 	 <meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et événements." />
 	 <meta property="og:image" content="https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" />
