Ajout d'un favicon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		  "priceRange": "50€ à 400€"
 		}
 		</script>
+		<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+		<link rel="manifest" href="./favicon_io/site.webmanifest">
 
 	 <meta property="og:title" content="Nina Carducci – Photographe à Bordeaux" />
 	 <meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, spécialisée dans les portraits et événements." />
