Modification du schema.org

--- a/index.html
+++ b/index.html
@@ -8,24 +8,42 @@
 	 
 	<script type="application/ld+json">
 		{
-		  "@context": "https://schema.org",
-		  "@type": "LocalBusiness",
-		  "name": "Nina Carducci – Photographe à Bordeaux",
-		  "image": "https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp",
-		  "address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"addressRegion": "Nouvelle-Aquitaine",
-			"postalCode": "33200",
-			"addressCountry": "FR"
-		  },
-		  "telephone": "05 56 67 78 89",
-		  "openingHours": "Mo-Fr 10:00-19:00",
-		  "priceRange": "50€ à 400€"
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci – Photographe",
+			"image": "https://gaudou-noemie.github.io/Projet-Nina-Carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp",
+			"@id": "https://gaudou-noemie.github.io/Projet-Nina-Carducci/",
+			"url": "https://gaudou-noemie.github.io/Projet-Nina-Carducci/",
+			"telephone": "05 56 67 78 89",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"addressRegion": "Nouvelle-Aquitaine",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": 44.8472,
+				"longitude": -0.5951
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"Monday",
+					"Tuesday",
+					"Wednesday",
+					"Thursday",
+					"Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			},
+			"priceRange": "50€ à 400€"
 		}
 		</script>
-		
+
 		<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
